# wxMathPlot-svn

./: CMakeLists.txt  Doxyfile  README  packages.sh  wxmathplot.pc.in
debian/: control
distrib/: Base.spec
include/wx/: mathplot.h
samples/sample3/: CMakeLists.txt
src/: mathplot.cpp
